--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 
-    <link rel="stylesheet" href="_CSS/style.css">
+    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" media="(max-width: 1400px)" href="responsive-1400.css">
     <link rel="stylesheet" media="(max-width: 940px)" href="responsive-940.css">
     <link rel="stylesheet" media="(max-width: 640px)" href="responsive-640.css">
