--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         -->
         
 
-        <img class="logo" src="image/new_logo.png" alt="logo CM Construtora">
+        <img class="logo" src="new_logo.png" alt="logo CM Construtora">
         <p>Construindo empreendimentos desde 2014</p>
     </header>
 
@@ -47,7 +47,7 @@
             <p>Estamos no ramo de construção desde 2014, atendendo toda Curitiba e Região metropolitana com a construção de empreendimentos e reformas.</p>
             <p>Possuimos uma equipe com profissionais especializados e capacitados nas diversas áreas da contrução civil, e ferramentas adequadas e especializadas, além do uso dos equipamentos de proteção individual (EPI).</p>
         </div>
-        <img src="image/service.jpg" alt="Cm construtora">
+        <img src="service.jpg" alt="Cm construtora">
     </section>
         
 
@@ -95,13 +95,13 @@
               </ol>
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img class="d-block w-100" src="image/front-p.jpg" alt="First slide">
+                <img class="d-block w-100" src="front-p.jpg" alt="First slide">
               </div>
               <div class="carousel-item">
-                <img class="d-block w-100" src="image/front2-p.jpg" alt="Second slide">
+                <img class="d-block w-100" src="front2-p.jpg" alt="Second slide">
               </div>
               <div class="carousel-item">
-                <img class="d-block w-100" src="image/front3-9.jpg" alt="Third slide">
+                <img class="d-block w-100" src="front3-9.jpg" alt="Third slide">
               </div>
             </div>
             <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
