--- a/index.html
+++ b/index.html
@@ -55,13 +55,13 @@
         <div class="list-services">
             <h2>Serviços</h2>
             <ul type='none'>
-                <li><i class="bi bi-hammer"></i> Construção de empreendimentos</li>
-                <li><i class="bi bi-outlet"></i> Elétrica</li>
-                <li><i class="bi bi-droplet-fill"></i> Hidráulica</li>
-                <li><i class="bi bi-hash"></i> Deck</li>
-                <li><i class="bi bi bi-back"></i> Instalação de pisos</li>
-                <li><i class="bi bi-palette"></i> Pintura</li>
-                <li><i class="bi bi-tools"></i> Reformas em geral</li>
+                <li class="topico"><i class="bi bi-hammer"></i> Construção de empreendimentos</li>
+                <li class="topico"><i class="bi bi-outlet"></i> Elétrica</li>
+                <li class="topico"><i class="bi bi-droplet-fill"></i> Hidráulica</li>
+                <li class="topico"><i class="bi bi-hash"></i> Deck</li>
+                <li class="topico"><i class="bi bi bi-back"></i> Instalação de pisos</li>
+                <li class="topico"><i class="bi bi-palette"></i> Pintura</li>
+                <li class="topico"><i class="bi bi-tools"></i> Reformas em geral</li>
             </ul>
         </div>
     </section>
