--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 
     <script src="http://code.jquery.com/jquery-1.10.2.min.js"></script>
     
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 
 </head>
 <body>
