--- a/services.html
+++ b/services.html
@@ -23,7 +23,28 @@
         <div class="card-group">
             <div class="test">
                 <div class="card">
-                  <img src="front-p.jpg" class="card-img-top" alt="...">
+                    <div id="carouselExampleControls" class="carousel slide card-img-top" data-ride="carousel" >
+                        <div class="carousel-inner">
+                          <div class="carousel-item active">
+                            <img class="d-block w-100" src="images/casa na arvore/0-main.jpg" alt="First slide">
+                          </div>
+                          <div class="carousel-item">
+                            <img class="d-block w-100" src="images/casa na arvore/1.jpg" alt="Second slide">
+                          </div>
+                          <div class="carousel-item">
+                            <img class="d-block w-100" src="images/casa na arvore/3.jpg" alt="Third slide">
+                          </div>
+                        </div>
+                        <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+                          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                          <span class="sr-only">Previous</span>
+                        </a>
+                        <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+                          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                          <span class="sr-only">Next</span>
+                        </a>
+                      </div>
+                  
                   <div class="card-body">
                     <h5 class="card-title">Card title</h5>
                     <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
@@ -32,7 +53,7 @@
             </div>
             <div class="test">
                 <div class="card">
-                  <a href="index.html"><img src="front2-p.jpg" class="card-img-top" alt="..."></a>
+                  <img src="" class="card-img-top" alt="...">
                   <div class="card-body">
                     <h5 class="card-title">Card title</h5>
                     <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
@@ -62,7 +83,8 @@
         </div>
     </main>
     <footer>
-
+        <p>&copy; CM Construtora   |   CNPJ: 13.349.668/0001-90</p>
+        <p>Desenvolvido por <a id="dev" href="https://github.com/guilhermesetim">Guilherme Setim</a></p>
     </footer>
 </body>
 </html>
