plus button - services

--- a/services.html
+++ b/services.html
@@ -34,6 +34,7 @@
             <div class="block-card">
                 <div class="card">
                     <img src="images/cards/card-01.jpg" class="card-img-top" alt="Sobrados">
+                    <span class="background-plus"><i class="bi bi-plus-circle-fill plus"></i></span>
                   <div class="card-body">
                     <h5 class="card-title">Sobrados</h5>
                     <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
@@ -45,6 +46,7 @@
             <div class="block-card">
                 <div class="card">
                     <img src="images/cards/card-02.jpg" class="card-img-top" alt="Deck">
+                    <span class="background-plus"><i class="bi bi-plus-circle-fill plus"></i></span>
                   <div class="card-body">
                     <h5 class="card-title">Deck</h5>
                     <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
@@ -55,6 +57,7 @@
             <div class="block-card">
                 <div class="card">
                     <img src="images/cards/card-03.jpg" class="card-img-top" alt="Pisos">
+                    <span class="background-plus"><i class="bi bi-plus-circle-fill plus"></i></span>
                   <div class="card-body">
                     <h5 class="card-title">Pisos</h5>
                     <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
@@ -64,7 +67,8 @@
 
             <div class="block-card">
                 <div class="card">
-                    <img src="images/cards/card-04.jpg" class="card-img-top" alt="Casa na árvore">
+                    <img src="images/cards/card-04.jpg" class="card-img-top" alt="Casa na árvore">,
+                    <span class="background-plus"><i class="bi bi-plus-circle-fill plus"></i></span>
                   <div class="card-body">
                     <h5 class="card-title">Casa na árvore</h5>
                     <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
@@ -75,6 +79,7 @@
             <div class="block-card">
                 <div class="card">
                     <img src="images/cards/card-05.jpg" class="card-img-top" alt="Pergolado">
+                    <span class="background-plus"><i class="bi bi-plus-circle-fill plus"></i></span>
                   <div class="card-body">
                     <h5 class="card-title">Pergolado</h5>
                     <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
@@ -85,6 +90,8 @@
             <div class="block-card">
                 <div class="card">
                     <img src="images/cards/card-06.jpg" class="card-img-top" alt="Telhado">
+                    <span class="background-plus"><i class="bi bi-plus-circle-fill plus"></i></span>
+                    
                   <div class="card-body">
                     <h5 class="card-title">Telhado</h5>
                     <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
@@ -95,6 +102,7 @@
             <div class="block-card">
                 <div class="card">
                     <img src="images/cards/card-07.jpg" class="card-img-top" alt="Revestimento">
+                    <span class="background-plus"><i class="bi bi-plus-circle-fill plus"></i></span>
                   <div class="card-body">
                     <h5 class="card-title">Revestimento</h5>
                     <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
@@ -105,6 +113,7 @@
             <div class="block-card">
                 <div class="card">
                     <img src="images/cards/card-08.jpg" class="card-img-top" alt="Altar de igreja">
+                    <span class="background-plus"><i class="bi bi-plus-circle-fill plus"></i></span>
                   <div class="card-body">
                     <h5 class="card-title">Altar de igreja</h5>
                     <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
