--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 <p>Possuimos uma equipe com profissionais especializados e capacitados nas diversas áreas da contrução civil, e ferramentas adequadas e especializadas, além do uso dos equipamentos de proteção individual (EPI).</p>
         
             </div>
-            <img src="service.jpg" alt="Cm construtora">
+            <img src="presentation.jpg" alt="Cm construtora">
         </section>
         
         <section class="services">
