--- a/index.html
+++ b/index.html
@@ -110,8 +110,8 @@
         <section class="contate">
             <div class="contate-numbers">
                 <h3>Entre em contato cononsco</h3>
-                <p><i style="color: #44CC64;" class="bi bi-whatsapp"></i> 41 9 9577-7311</p>
-                <p><i style="color: #44CC64;" class="bi bi-whatsapp"></i> 41 9 9567-2848</p>
+                <p><a href="tel:+55-41-99577-7311"><i style="color: #44CC64;" class="bi bi-whatsapp"></i> 41 9 9577-7311</a></p>
+                <p><a href="tel:+55-41-99567-2848"><i style="color: #44CC64;" class="bi bi-whatsapp"></i> 41 9 9567-2848</a></p>
             </div>
             <div class="contate-social">
                 <h3>Nossas redes sociais</h3>
