--- a/services.html
+++ b/services.html
@@ -13,19 +13,14 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 
-    <script>
-        document.querySelector('.items').addEventListener('wheel', function(event) {
-    if (event.deltaY > 0){
-        event.target.scrollBy(300,0)
-    } else {
-        event.target.scrollBy(-300,0)
-    }
-    })
-    </script>
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 
 </head>
 <body>
     <header>
+      <nav>
+        <a href="index.html" target="_self" rel="next"><i class="bi bi-house-door-fill"></i> Home</a>
+      </nav>
         <h2>Obras realizadas</h2>
     </header>
 
@@ -228,7 +223,7 @@
           <!--Sixth Card-->
           <div class="block-card">
             <div class="card">
-                <img src="images/cards/card-01.jpg" class="card-img-top" alt="Jazigo">
+                <img src="images/cards/card-06.jpg" class="card-img-top" alt="Jazigo">
                 <span class="background-plus"><i class="bi bi-plus-circle-fill plus" data-toggle="modal" data-target="#sixthModal"></i></span>
               <div class="card-body">
                 <h5 class="card-title">Jazigo</h5>
