--- a/services.html
+++ b/services.html
@@ -19,7 +19,7 @@
 <body>
     <header>
       <nav>
-        <a href="index.html" target="_self" rel="next"><i class="bi bi-house-door-fill"></i> Home</a>
+        <a href="index.html" target="_self" rel="next"><i class="bi bi-house-door-fill"></i> Início</a>
       </nav>
         <h2>Obras realizadas</h2>
     </header>
