imagens home - optimaze

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                     <h2>Conheça o nosso trabalho</h2>
                 </a>
             
-            <div id="#carousel-gallery">
+            <div id="carousel-gallery">
                 <div id="carouselExampleControls" class="carousel slide" data-ride="carousel" data-interval="4000">
                     <ol class="carousel-indicators">
                         <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
