--- a/works.html
+++ b/works.html
@@ -5,7 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CM Construtora - Obras realizadas</title>
-    <link rel="stylesheet" href="style-services.css">
+    
+
+    <!--Css page-->
+    <link rel="stylesheet" href="style-works.css">
+    <link rel="stylesheet" media="(max-width: 700px)" href="style-works-mqw-700.css">
 
     <!--BootStrap Css e JS-->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
@@ -13,10 +17,17 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 
+    <!--Favicon-->
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 
 </head>
 <body>
+    <!--Whatsapp button-->
+    <a  class="whatsapp-link" href="https://api.whatsapp.com/send?phone=5541995777311" target="_blank">
+      <i class="bi bi-whatsapp"> entre em contato</i>
+    </a>
+
+
     <header>
       <nav>
         <a href="index.html" target="_self" rel="next"><i class="bi bi-house-door-fill"></i> Início</a>
